--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^17.0.2",
     "parcel": "^2.3.2"
   },
+  "source": "index.html",
   "scripts": {
     "start": "parcel index.html"
   }
